--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	Favor entre com os dados de identificação para acessar o sistema:<br/><br/>
 	<table>
 		<tr>
-			<td width="150px">Usuario: </td>
+			<td width="150px">Usuário: </td>
 			<td width="200px"><input type="text" name="username" size ="20">
 			</td>
 		</tr>
